# dbo

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  aminclude.am  autogen.sh  configure.ac
doc/: .gitignore  Makefile.am  doxygen.conf  gen-man-pages.pl  test.h
example/: Makefile.am  configure.ac
example/m4/: ax_lib_dbo.m4
example/src/: .gitignore  Makefile.am  contacts.c  contacts.json  example.c
m4/: ax_cunit.m4
src/: Makefile.am  README  db_backend.c  db_backend.h  db_backend_couchdb.c  db_backend_couchdb.h  db_backend_mysql.c  db_backend_mysql.h  db_backend_sqlite.c  db_backend_sqlite.h  db_clause.c  db_clause.h  db_configuration.c  db_configuration.h  db_connection.c  db_connection.h  db_enum.h  db_error.h  db_join.c  db_join.h  db_mm.c  db_mm.h  db_object.c  db_object.h  db_result.c  db_result.h  db_type.h  db_value.c  db_value.h  libdbo_backend.c  libdbo_backend.h  libdbo_backend_couchdb.c  libdbo_backend_couchdb.h  libdbo_backend_mysql.c  libdbo_backend_mysql.h  libdbo_backend_sqlite.c  libdbo_backend_sqlite.h  libdbo_clause.c  libdbo_clause.h  libdbo_configuration.c  (+18 more)
src/libdbo/: backend.h  clause.h  configuration.h  connection.h  enum.h  error.h  join.h  libdbo.h  log.h  mm.h  object.h  result.h  type.h  value.h
src/libdbo/backend/: couchdb.h  mysql.h  sqlite.h
test/: .gitignore  Makefile.am  test.c  test.h  test.json  test_classes.c  test_classes_short_names.c  test_database_operations.c  test_initialization.c  test_mm.c
tools/: Makefile.am  dbo-generate-objects  dbo-generate-schema  dbo-generate-tests
