# Copyright (c) 2014 Jerry Lundström <lundstrom.jerry@gmail.com>
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
# GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
# IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

MANPAGES3 = man/man3/libdbo_backend_connect.3 \
man/man3/libdbo_backend_couchdb_new_handle.3 \
man/man3/libdbo_backend_count.3 \
man/man3/libdbo_backend_create.3 \
man/man3/libdbo_backend_delete.3 \
man/man3/libdbo_backend_disconnect.3 \
man/man3/libdbo_backend_factory_get_backend.3 \
man/man3/libdbo_backend_factory_shutdown.3 \
man/man3/libdbo_backend_free.3 \
man/man3/libdbo_backend_handle.3 \
man/man3/libdbo_backend_handle_connect.3 \
man/man3/libdbo_backend_handle_connect_t.3 \
man/man3/libdbo_backend_handle_count.3 \
man/man3/libdbo_backend_handle_count_t.3 \
man/man3/libdbo_backend_handle_create.3 \
man/man3/libdbo_backend_handle_create_t.3 \
man/man3/libdbo_backend_handle_data.3 \
man/man3/libdbo_backend_handle_delete.3 \
man/man3/libdbo_backend_handle_delete_t.3 \
man/man3/libdbo_backend_handle_disconnect.3 \
man/man3/libdbo_backend_handle_disconnect_t.3 \
man/man3/libdbo_backend_handle_free.3 \
man/man3/libdbo_backend_handle_free_t.3 \
man/man3/libdbo_backend_handle_initialize.3 \
man/man3/libdbo_backend_handle_initialize_t.3 \
man/man3/libdbo_backend_handle_new.3 \
man/man3/libdbo_backend_handle_not_empty.3 \
man/man3/libdbo_backend_handle_read.3 \
man/man3/libdbo_backend_handle_read_t.3 \
man/man3/libdbo_backend_handle_set_connect.3 \
man/man3/libdbo_backend_handle_set_count.3 \
man/man3/libdbo_backend_handle_set_create.3 \
man/man3/libdbo_backend_handle_set_data.3 \
man/man3/libdbo_backend_handle_set_delete.3 \
man/man3/libdbo_backend_handle_set_disconnect.3 \
man/man3/libdbo_backend_handle_set_free.3 \
man/man3/libdbo_backend_handle_set_initialize.3 \
man/man3/libdbo_backend_handle_set_read.3 \
man/man3/libdbo_backend_handle_set_shutdown.3 \
man/man3/libdbo_backend_handle_set_transaction_begin.3 \
man/man3/libdbo_backend_handle_set_transaction_commit.3 \
man/man3/libdbo_backend_handle_set_transaction_rollback.3 \
man/man3/libdbo_backend_handle_set_update.3 \
man/man3/libdbo_backend_handle_shutdown.3 \
man/man3/libdbo_backend_handle_shutdown_t.3 \
man/man3/libdbo_backend_handle_transaction_begin.3 \
man/man3/libdbo_backend_handle_transaction_begin_t.3 \
man/man3/libdbo_backend_handle_transaction_commit.3 \
man/man3/libdbo_backend_handle_transaction_commit_t.3 \
man/man3/libdbo_backend_handle_transaction_rollback.3 \
man/man3/libdbo_backend_handle_transaction_rollback_t.3 \
man/man3/libdbo_backend_handle_update.3 \
man/man3/libdbo_backend_handle_update_t.3 \
man/man3/libdbo_backend_initialize.3 \
man/man3/libdbo_backend_meta_data_copy.3 \
man/man3/libdbo_backend_meta_data_free.3 \
man/man3/libdbo_backend_meta_data_list_add.3 \
man/man3/libdbo_backend_meta_data_list_copy.3 \
man/man3/libdbo_backend_meta_data_list_find.3 \
man/man3/libdbo_backend_meta_data_list_free.3 \
man/man3/libdbo_backend_meta_data_list_new.3 \
man/man3/libdbo_backend_meta_data_list_new_copy.3 \
man/man3/libdbo_backend_meta_data_name.3 \
man/man3/libdbo_backend_meta_data_new.3 \
man/man3/libdbo_backend_meta_data_new_copy.3 \
man/man3/libdbo_backend_meta_data_not_empty.3 \
man/man3/libdbo_backend_meta_data_set_name.3 \
man/man3/libdbo_backend_meta_data_set_value.3 \
man/man3/libdbo_backend_meta_data_value.3 \
man/man3/libdbo_backend_mysql_new_handle.3 \
man/man3/libdbo_backend_name.3 \
man/man3/libdbo_backend_new.3 \
man/man3/libdbo_backend_not_empty.3 \
man/man3/libdbo_backend_read.3 \
man/man3/libdbo_backend_set_handle.3 \
man/man3/libdbo_backend_set_name.3 \
man/man3/libdbo_backend_shutdown.3 \
man/man3/libdbo_backend_sqlite_new_handle.3 \
man/man3/libdbo_backend_transaction_begin.3 \
man/man3/libdbo_backend_transaction_commit.3 \
man/man3/libdbo_backend_transaction_rollback.3 \
man/man3/libdbo_backend_update.3 \
man/man3/libdbo_clause_field.3 \
man/man3/libdbo_clause_free.3 \
man/man3/libdbo_clause_get_value.3 \
man/man3/libdbo_clause_list.3 \
man/man3/libdbo_clause_list_add.3 \
man/man3/libdbo_clause_list_begin.3 \
man/man3/libdbo_clause_list_free.3 \
man/man3/libdbo_clause_list_new.3 \
man/man3/libdbo_clause_new.3 \
man/man3/libdbo_clause_next.3 \
man/man3/libdbo_clause_not_empty.3 \
man/man3/libdbo_clause_operator.3 \
man/man3/libdbo_clause_set_field.3 \
man/man3/libdbo_clause_set_list.3 \
man/man3/libdbo_clause_set_operator.3 \
man/man3/libdbo_clause_set_table.3 \
man/man3/libdbo_clause_set_type.3 \
man/man3/libdbo_clause_table.3 \
man/man3/libdbo_clause_type.3 \
man/man3/libdbo_clause_value.3 \
man/man3/libdbo_configuration_free.3 \
man/man3/libdbo_configuration_list_add.3 \
man/man3/libdbo_configuration_list_find.3 \
man/man3/libdbo_configuration_list_free.3 \
man/man3/libdbo_configuration_list_new.3 \
man/man3/libdbo_configuration_name.3 \
man/man3/libdbo_configuration_new.3 \
man/man3/libdbo_configuration_not_empty.3 \
man/man3/libdbo_configuration_set_name.3 \
man/man3/libdbo_configuration_set_value.3 \
man/man3/libdbo_configuration_value.3 \
man/man3/libdbo_connection_connect.3 \
man/man3/libdbo_connection_count.3 \
man/man3/libdbo_connection_create.3 \
man/man3/libdbo_connection_delete.3 \
man/man3/libdbo_connection_disconnect.3 \
man/man3/libdbo_connection_free.3 \
man/man3/libdbo_connection_new.3 \
man/man3/libdbo_connection_read.3 \
man/man3/libdbo_connection_set_configuration_list.3 \
man/man3/libdbo_connection_setup.3 \
man/man3/libdbo_connection_transaction_begin.3 \
man/man3/libdbo_connection_transaction_commit.3 \
man/man3/libdbo_connection_transaction_rollback.3 \
man/man3/libdbo_connection_update.3 \
man/man3/libdbo_join_free.3 \
man/man3/libdbo_join_from_field.3 \
man/man3/libdbo_join_from_table.3 \
man/man3/libdbo_join_list_add.3 \
man/man3/libdbo_join_list_begin.3 \
man/man3/libdbo_join_list_free.3 \
man/man3/libdbo_join_list_new.3 \
man/man3/libdbo_join_new.3 \
man/man3/libdbo_join_next.3 \
man/man3/libdbo_join_not_empty.3 \
man/man3/libdbo_join_set_from_field.3 \
man/man3/libdbo_join_set_from_table.3 \
man/man3/libdbo_join_set_to_field.3 \
man/man3/libdbo_join_set_to_table.3 \
man/man3/libdbo_join_to_field.3 \
man/man3/libdbo_join_to_table.3 \
man/man3/libdbo_log.3 \
man/man3/libdbo_log_handler_t.3 \
man/man3/libdbo_log_set_handler.3 \
man/man3/libdbo_mm_delete.3 \
man/man3/libdbo_mm_free_t.3 \
man/man3/libdbo_mm_init.3 \
man/man3/libdbo_mm_malloc_t.3 \
man/man3/libdbo_mm_new0.3 \
man/man3/libdbo_mm_new.3 \
man/man3/libdbo_mm_pagesize.3 \
man/man3/libdbo_mm_release.3 \
man/man3/libdbo_mm_set_free.3 \
man/man3/libdbo_mm_set_malloc.3 \
man/man3/libdbo_object_backend_meta_data_list.3 \
man/man3/libdbo_object_connection.3 \
man/man3/libdbo_object_count.3 \
man/man3/libdbo_object_create.3 \
man/man3/libdbo_object_delete.3 \
man/man3/libdbo_object_field_copy.3 \
man/man3/libdbo_object_field_enum_set.3 \
man/man3/libdbo_object_field_free.3 \
man/man3/libdbo_object_field_list_add.3 \
man/man3/libdbo_object_field_list_begin.3 \
man/man3/libdbo_object_field_list_copy.3 \
man/man3/libdbo_object_field_list_free.3 \
man/man3/libdbo_object_field_list_new.3 \
man/man3/libdbo_object_field_list_new_copy.3 \
man/man3/libdbo_object_field_list_size.3 \
man/man3/libdbo_object_field_name.3 \
man/man3/libdbo_object_field_new.3 \
man/man3/libdbo_object_field_new_copy.3 \
man/man3/libdbo_object_field_next.3 \
man/man3/libdbo_object_field_not_empty.3 \
man/man3/libdbo_object_field_set_enum_set.3 \
man/man3/libdbo_object_field_set_name.3 \
man/man3/libdbo_object_field_set_type.3 \
man/man3/libdbo_object_field_type.3 \
man/man3/libdbo_object_free.3 \
man/man3/libdbo_object_new.3 \
man/man3/libdbo_object_object_field_list.3 \
man/man3/libdbo_object_primary_key_name.3 \
man/man3/libdbo_object_read.3 \
man/man3/libdbo_object_set_backend_meta_data_list.3 \
man/man3/libdbo_object_set_connection.3 \
man/man3/libdbo_object_set_object_field_list.3 \
man/man3/libdbo_object_set_primary_key_name.3 \
man/man3/libdbo_object_set_table.3 \
man/man3/libdbo_object_table.3 \
man/man3/libdbo_object_update.3 \
man/man3/libdbo_result_backend_meta_data_list.3 \
man/man3/libdbo_result_copy.3 \
man/man3/libdbo_result_free.3 \
man/man3/libdbo_result_list_add.3 \
man/man3/libdbo_result_list_begin.3 \
man/man3/libdbo_result_list_copy.3 \
man/man3/libdbo_result_list_fetch_all.3 \
man/man3/libdbo_result_list_free.3 \
man/man3/libdbo_result_list_new.3 \
man/man3/libdbo_result_list_new_copy.3 \
man/man3/libdbo_result_list_next.3 \
man/man3/libdbo_result_list_next_t.3 \
man/man3/libdbo_result_list_set_next.3 \
man/man3/libdbo_result_list_size.3 \
man/man3/libdbo_result_new.3 \
man/man3/libdbo_result_new_copy.3 \
man/man3/libdbo_result_not_empty.3 \
man/man3/libdbo_result_set_backend_meta_data_list.3 \
man/man3/libdbo_result_set_value_set.3 \
man/man3/libdbo_result_value_set.3 \
man/man3/libdbo_value_cmp.3 \
man/man3/libdbo_value_copy.3 \
man/man3/libdbo_value_enum_text.3 \
man/man3/libdbo_value_enum_value.3 \
man/man3/libdbo_value_free.3 \
man/man3/libdbo_value_from_enum_text.3 \
man/man3/libdbo_value_from_enum_value.3 \
man/man3/libdbo_value_from_int32.3 \
man/man3/libdbo_value_from_int64.3 \
man/man3/libdbo_value_from_text2.3 \
man/man3/libdbo_value_from_text.3 \
man/man3/libdbo_value_from_uint32.3 \
man/man3/libdbo_value_from_uint64.3 \
man/man3/libdbo_value_int32.3 \
man/man3/libdbo_value_int64.3 \
man/man3/libdbo_value_new.3 \
man/man3/libdbo_value_new_copy.3 \
man/man3/libdbo_value_not_empty.3 \
man/man3/libdbo_value_primary_key.3 \
man/man3/libdbo_value_reset.3 \
man/man3/libdbo_value_set_at.3 \
man/man3/libdbo_value_set_free.3 \
man/man3/libdbo_value_set_get.3 \
man/man3/libdbo_value_set_new.3 \
man/man3/libdbo_value_set_new_copy.3 \
man/man3/libdbo_value_set_primary_key.3 \
man/man3/libdbo_value_set_size.3 \
man/man3/libdbo_value_text.3 \
man/man3/libdbo_value_to_enum_text.3 \
man/man3/libdbo_value_to_enum_value.3 \
man/man3/libdbo_value_to_int32.3 \
man/man3/libdbo_value_to_int64.3 \
man/man3/libdbo_value_to_text.3 \
man/man3/libdbo_value_to_uint32.3 \
man/man3/libdbo_value_to_uint64.3 \
man/man3/libdbo_value_type.3 \
man/man3/libdbo_value_uint32.3 \
man/man3/libdbo_value_uint64.3

MANPAGES7 = man/man7/libdbo_backend.7 \
man/man7/libdbo_backend_couchdb.7 \
man/man7/libdbo_backend_factory.7 \
man/man7/libdbo_backend_handle.7 \
man/man7/libdbo_backend_meta_data.7 \
man/man7/libdbo_backend_meta_data_list.7 \
man/man7/libdbo_backend_mysql.7 \
man/man7/libdbo_backend_sqlite.7 \
man/man7/libdbo_clause.7 \
man/man7/libdbo_clause_list.7 \
man/man7/libdbo_configuration.7 \
man/man7/libdbo_configuration_list.7 \
man/man7/libdbo_connection.7 \
man/man7/libdbo_enum.7 \
man/man7/libdbo_error.7 \
man/man7/libdbo_join.7 \
man/man7/libdbo_join_list.7 \
man/man7/libdbo_log.7 \
man/man7/libdbo_mm.7 \
man/man7/libdbo_object.7 \
man/man7/libdbo_object_field.7 \
man/man7/libdbo_object_field_list.7 \
man/man7/libdbo_result.7 \
man/man7/libdbo_result_list.7 \
man/man7/libdbo_type.7 \
man/man7/libdbo_value.7 \
man/man7/libdbo_value_set.7

EXTRA_DIST = doxygen.conf

CLEANFILES = \
	dbo.tag \
	-r \
	html \
	xml \
	man

if DX_COND_doc
dbo.tag: doxygen.conf
	PROJECT_NAME="$(PACKAGE)" \
	PROJECT_NUMBER="$(PACKAGE_VERSION)" \
	top_srcdir="$(top_srcdir)" \
	doxygen doxygen.conf
	mkdir -p man/man3 man/man7
	srcdir="$(top_srcdir)/src" ./gen-man-pages.pl xml/*.xml

all-local: dbo.tag

install-data-local:
	$(MKDIR_P) "$(docdir)"/html/
	$(INSTALL_DATA) html/*.{html,css,js,png} "$(docdir)"/html/
	$(MKDIR_P) "$(docdir)"/html/search/
	$(INSTALL_DATA) html/search/*.{html,css,js,png} "$(docdir)"/html/search/

$(MANPAGES3) $(MANPAGES7): dbo.tag

man3_MANS = $(MANPAGES3)
man7_MANS = $(MANPAGES7)
endif
